--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>org.example</groupId>
     <artifactId>statement-coverage</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -12,6 +13,13 @@
             <groupId>org.soot-oss</groupId>
             <artifactId>soot</artifactId>
             <version>4.3.0</version>
+        </dependency>
+        <!-- JUnit 4 dependency for testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
